--- a/DmsRelease.props
+++ b/DmsRelease.props
@@ -8,6 +8,9 @@
 	<CopyCppRuntimeToOutputDir>true</CopyCppRuntimeToOutputDir>
     <LinkIncremental>false</LinkIncremental>
   </PropertyGroup>
+  <PropertyGroup Label="Vcpkg">
+    <VcpkgConfiguration>Release</VcpkgConfiguration>
+  </PropertyGroup>
   <ItemDefinitionGroup>
     <Midl>
       <PreprocessorDefinitions>NDEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
