--- a/exe/gui/GeoDmsGUI.vcxproj.filters
+++ b/exe/gui/GeoDmsGUI.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\GuiGraphics.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GuiEmail.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="backends\imgui_impl_glfw.h">
@@ -126,6 +129,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GuiGraphics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GuiEmail.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
