Added GuiStatusBar, updated open window default status.

--- a/exe/gui/GeoDmsGUI.vcxproj
+++ b/exe/gui/GeoDmsGUI.vcxproj
@@ -171,6 +171,7 @@
     <ClCompile Include="src\GuiMain.cpp" />
     <ClCompile Include="src\GuiMenu.cpp" />
     <ClCompile Include="src\GuiOptions.cpp" />
+    <ClCompile Include="src\GuiStatusBar.cpp" />
     <ClCompile Include="src\GuiStyles.cpp" />
     <ClCompile Include="src\GuiToolbar.cpp" />
     <ClCompile Include="src\GuiTreeview.cpp" />
@@ -195,6 +196,7 @@
     <ClInclude Include="src\GuiMain.h" />
     <ClInclude Include="src\GuiMenu.h" />
     <ClInclude Include="src\GuiOptions.h" />
+    <ClInclude Include="src\GuiStatusBar.h" />
     <ClInclude Include="src\GuiStyles.h" />
     <ClInclude Include="src\GuiToolbar.h" />
     <ClInclude Include="src\GuiTreeview.h" />
