--- a/exe/gui/GeoDmsGUI.vcxproj.filters
+++ b/exe/gui/GeoDmsGUI.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="src\GuiEmail.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GuiStatusBar.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="backends\imgui_impl_glfw.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GuiEmail.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GuiStatusBar.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
