--- a/stg/dll/StgDll.vcxproj
+++ b/stg/dll/StgDll.vcxproj
@@ -23,14 +23,12 @@
     <ProjectName>Stg</ProjectName>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
-  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v143</PlatformToolset>
   </PropertyGroup>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
-  <ImportGroup Label="ExtensionSettings">
-  </ImportGroup>
   <ImportGroup Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" />
   </ImportGroup>
@@ -40,8 +38,7 @@
   <ImportGroup Condition="'$(Configuration)'=='Release'" Label="PropertySheets">
     <Import Project="..\..\DmsRelease.props" />
   </ImportGroup>
-  <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Label="Vcpkg" Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" />
+
   <ItemDefinitionGroup>
     <ClCompile>
       <AdditionalIncludeDirectories>./src;../../sym/dll/src;../../stgimpl/dll/src;../../rtc/dll/src;../../tic/dll/src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -61,7 +58,7 @@
     <ClCompile Include="src\gdal\gdal_base.cpp" />
     <ClCompile Include="src\gdal\gdal_grid.cpp" />
     <ClCompile Include="src\gdal\gdal_vect.cpp" />
-    <CustomBuild Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal\LICENSE.TXT">
+    <CustomBuild Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal\LICENSE.TXT" Condition="'$(Platform)'=='x64'">
       <FileType>Document</FileType>
       <Command>
 			ROBOCOPY C:\dev\vcpkg\installed\$(Platform)-windows\share\gdal $(TargetDir)gdaldata /v /fft /E /njh /njs
@@ -71,10 +68,31 @@
       <Message>RoboCopying %(Identity) into $(TargetDir)gdaldata</Message>
       <Outputs>$(TargetDir)gdaldata\LICENSE.TXT</Outputs>
     </CustomBuild>
-    <CustomBuild Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\proj\proj.db">
+    <CustomBuild Include="C:\dev\vcpkg\installed\$(Platform)-windows\share\proj\proj.db" Condition="'$(Platform)'=='x64'">
       <FileType>Document</FileType>
       <Command>
 			ROBOCOPY C:\dev\vcpkg\installed\$(Platform)-windows\share\proj $(TargetDir)proj4data /v /fft /E /njh /njs /xf *.cmake
+			IF %ErrorLevel%==2 EXIT 0
+			IF %ErrorLevel%==1 EXIT 0
+			IF %ErrorLevel%==8 ECHO SEVERAL FILES DID NOT COPY
+	  </Command>
+      <Message>Copying %(Filename)%(Extension) into $(TargetDir)proj4data</Message>
+      <Outputs>$(TargetDir)proj4data\proj.db</Outputs>
+    </CustomBuild>
+    <CustomBuild Include="C:\dev\vcpkg\installed\x86-windows\share\gdal\LICENSE.TXT" Condition="'$(Platform)'=='Win32'">
+      <FileType>Document</FileType>
+      <Command>
+			ROBOCOPY C:\dev\vcpkg\installed\x86-windows\share\gdal $(TargetDir)gdaldata /v /fft /E /njh /njs
+			IF %ErrorLevel%==1 EXIT 0
+			IF %ErrorLevel%==8 ECHO SEVERAL FILES DID NOT COPY
+	  </Command>
+      <Message>RoboCopying %(Identity) into $(TargetDir)gdaldata</Message>
+      <Outputs>$(TargetDir)gdaldata\LICENSE.TXT</Outputs>
+    </CustomBuild>
+    <CustomBuild Include="C:\dev\vcpkg\installed\x86-windows\share\proj\proj.db" Condition="'$(Platform)'=='Win32'">
+      <FileType>Document</FileType>
+      <Command>
+			ROBOCOPY C:\dev\vcpkg\installed\x86-windows\share\proj $(TargetDir)proj4data /v /fft /E /njh /njs /xf *.cmake
 			IF %ErrorLevel%==2 EXIT 0
 			IF %ErrorLevel%==1 EXIT 0
 			IF %ErrorLevel%==8 ECHO SEVERAL FILES DID NOT COPY
