--- a/exe/gui/GeoDmsGUI.vcxproj
+++ b/exe/gui/GeoDmsGUI.vcxproj
@@ -30,6 +30,7 @@
   <PropertyGroup Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v143</PlatformToolset>
+    <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
