--- a/clc/dll/Clc1.vcxproj
+++ b/clc/dll/Clc1.vcxproj
@@ -27,6 +27,7 @@
   <PropertyGroup Label="Configuration">
     <ConfigurationType>DynamicLibrary</ConfigurationType>
     <PlatformToolset>v143</PlatformToolset>
+    <PreferredToolArchitecture>x64</PreferredToolArchitecture>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
@@ -57,6 +58,7 @@
     <ClCompile Include="src1\CalcClassBreaks.cpp" />
     <ClCompile Include="src1\CalcFactory.cpp" />
     <ClCompile Include="src1\ClassBreak.cpp" />
+    <ClCompile Include="src1\Classify.cpp" />
     <ClCompile Include="src1\Clc1Interface.cpp" />
     <ClCompile Include="src1\Cumulate.cpp" />
     <ClCompile Include="src1\ExprCalculator.cpp" />
@@ -156,6 +158,7 @@
     <ClInclude Include="include\UnitGroup.h" />
     <ClInclude Include="include\CalcClassBreaks.h" />
     <ClInclude Include="include\ValueGetter.h" />
+    <ClInclude Include="src1\RLookup.ipp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
