--- a/DmsRelease.props
+++ b/DmsRelease.props
@@ -35,6 +35,8 @@
     <Link>
       <LinkTimeCodeGeneration>UseLinkTimeCodeGeneration</LinkTimeCodeGeneration>
       <RandomizedBaseAddress>true</RandomizedBaseAddress>
-    </Link>
+	  <EnableCOMDATFolding>true</EnableCOMDATFolding>
+	  <OptimizeReferences>true</OptimizeReferences>
+	</Link>
   </ItemDefinitionGroup>
 </Project>
