--- a/exe/gui/GeoDmsGUI.vcxproj.filters
+++ b/exe/gui/GeoDmsGUI.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="src\GuiStatusBar.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GuiUnitTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="backends\imgui_impl_glfw.h">
@@ -138,6 +141,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GuiStatusBar.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GuiUnitTest.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
