--- a/exe/gui/GeoDmsGUI.vcxproj.filters
+++ b/exe/gui/GeoDmsGUI.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="src\GuiUnitTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GuiExport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="backends\imgui_impl_glfw.h">
@@ -144,6 +147,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GuiUnitTest.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GuiExport.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
