--- a/exe/gui/GeoDmsGUI.vcxproj.filters
+++ b/exe/gui/GeoDmsGUI.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClCompile Include="src\GuiExport.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\GuiTableview.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="backends\imgui_impl_glfw.h">
@@ -150,6 +153,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\GuiExport.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\GuiTableview.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
