FutureTileFunctor: replaced SharedPtr by std:weak_ptr for requested tile_futures to support early release of used tile data.

--- a/tic/dll/DmTic.vcxproj
+++ b/tic/dll/DmTic.vcxproj
@@ -54,6 +54,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="FileName.cpp" />
     <ClCompile Include="src\Aspect.cpp" />
     <ClCompile Include="src\CalcDestroyer.cpp" />
     <ClCompile Include="src\DedicatedAttrs.cpp" />
