--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ todo*.txt
 /XE2/General/DmsInterface/__history
 
 /XE2/DMS/GeoDmsGui.identcache
+/exe/gui/GeoDmsGuiQt.vcxproj.filters
+/exe/gui/GeoDmsGuiQt.filters
